--- a/pdf/translations/es/LC_MESSAGES/text.po
+++ b/pdf/translations/es/LC_MESSAGES/text.po
@@ -3,24 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-09-06 15:43+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2023-06-15 21:10-0400\n"
 "Last-Translator: Anderson Franca <anderson.frca@gmail.com>, 2018\n"
-"Language-Team: Portuguese (Brazil) (https://www.transifex.com/open-edx/teams/6205/pt_BR/)\n"
+"Language-Team: MIME-Version: 1.0\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: pdf/pdf.py:32 pdf/static/html/pdf_edit.html:7
 msgid "Display Name"
-msgstr "Exibir Nome"
+msgstr "Nombre a mostrar"
 
 #: pdf/pdf.py:33
 msgid "PDF"
@@ -28,47 +28,49 @@ msgstr "PDF"
 
 #: pdf/pdf.py:35 pdf/static/html/pdf_edit.html:10
 msgid "This name appears in the horizontal navigation at the top of the page."
-msgstr "Este nome aparece na navegação horizontal no alto da página"
+msgstr ""
+"Este nombre aparece en la barra horizontal de navegación en la parte "
+"superior."
 
 #: pdf/pdf.py:37 pdf/static/html/pdf_edit.html:15
 msgid "PDF URL"
-msgstr "URL do PDF"
+msgstr "URL PDF"
 
 #: pdf/pdf.py:38
 msgid "http://tutorial.math.lamar.edu/pdf/Trig_Cheat_Sheet.pdf"
-msgstr "http://tutorial.math.lamar.edu/pdf/Trig_Cheat_Sheet.pdf"
+msgstr "https://diplomados.gep.uchile.cl/archivos/ejemplo.pdf"
 
 #: pdf/pdf.py:40 pdf/static/html/pdf_edit.html:18
-msgid "The URL of the PDF file"
-msgstr "O URL para o seu arquivo PDF"
+msgid "The URL for your PDF."
+msgstr "La dirección (URL) del PDF."
 
 #: pdf/pdf.py:42 pdf/static/html/pdf_edit.html:23
 msgid "PDF Download Allowed"
-msgstr "Permitir baixar PDF"
+msgstr "Permitir descarga del PDF"
 
 #: pdf/pdf.py:45 pdf/static/html/pdf_edit.html:29
 msgid "Display a download button for this PDF."
-msgstr "Exibir um botão de baixar para este PDF"
+msgstr "Mostrar un botón de descarga."
 
 #: pdf/pdf.py:47 pdf/static/html/pdf_edit.html:34
 msgid "Source document button text"
-msgstr "Texto do botão do documento de origem"
+msgstr "Texto del boton"
 
 #: pdf/pdf.py:50 pdf/pdf.py:55 pdf/static/html/pdf_edit.html:41
 msgid ""
 "Add a download link for the source file of your PDF. Use it for example to "
 "provide the PowerPoint file used to create this PDF."
 msgstr ""
-"Adicione um link para baixar o arquivo de origem do seu PDF. Use, por "
-"exemplo, para fornecer o arquivo do PowerPoint usado ao criar este PDF."
+"Agrega un link de descarga de la fuente original, por ejemplo un PPT que "
+"era el origen de este PDF."
 
 #: pdf/pdf.py:52 pdf/static/html/pdf_edit.html:38
 msgid "Source document URL"
-msgstr "URL do documento de origem"
+msgstr "Dirección (URL) del documento original"
 
 #: pdf/static/html/pdf_edit.html:25
 msgid "True"
-msgstr "Verdadeiro"
+msgstr "Verdadero"
 
 #: pdf/static/html/pdf_edit.html:26
 msgid "False"
@@ -76,11 +78,11 @@ msgstr "Falso"
 
 #: pdf/static/html/pdf_edit.html:35
 msgid "Default : Download the source document"
-msgstr "Padrão: Baixar o documento de origem"
+msgstr "Predeterminado: Descargar el original"
 
 #: pdf/static/html/pdf_edit.html:49
 msgid "Save"
-msgstr "Salvar"
+msgstr "Guardar"
 
 #: pdf/static/html/pdf_edit.html:52
 msgid "Cancel"
@@ -88,12 +90,12 @@ msgstr "Cancelar"
 
 #: pdf/static/html/pdf_view.html:6
 msgid "It appears you don't have a PDF plugin for this browser."
-msgstr "Parece que você não tem um plugin de PDF para este browser"
+msgstr "Parece que no tienes un plugin para leer PDF."
 
 #: pdf/static/html/pdf_view.html:13
 msgid "Download the PDF"
-msgstr "Baixar o PDF"
+msgstr "Descargar el PDF"
 
 #: pdf/static/html/pdf_view.html:18
 msgid "Download the source document"
-msgstr "Baixar o documento de origem"
+msgstr "Descargar el original"
