--- a/pdf/translations/es/LC_MESSAGES/text.po
+++ b/pdf/translations/es/LC_MESSAGES/text.po
@@ -41,7 +41,7 @@ msgid "http://tutorial.math.lamar.edu/pdf/Trig_Cheat_Sheet.pdf"
 msgstr "https://diplomados.gep.uchile.cl/archivos/ejemplo.pdf"
 
 #: pdf/pdf.py:40 pdf/static/html/pdf_edit.html:18
-msgid "The URL for your PDF."
+msgid "The URL of the PDF file"
 msgstr "La dirección (URL) del PDF."
 
 #: pdf/pdf.py:42 pdf/static/html/pdf_edit.html:23
